--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
             </header>
             <div class="allFeatures">
                 <div class="todo elem" id="0">
-                    <img src="https://plus.unsplash.com/premium_photo-1710962184909-f9f8dc2c9f5f?q=80&w=3987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img src="assests/todo.jpg"
                         alt="">
                     <h2>To Do List</h2>
                 </div>
                 <div class="daily elem" id="1">
-                    <img src="https://images.unsplash.com/photo-1677249490921-3246e81f19e3?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img src="assests/dailyplanner.jpg"
                         alt="">
                     <h2>Daily Planner</h2>
                 </div>
                 <div class="moti elem" id="2">
-                    <img src="https://images.unsplash.com/photo-1678986718987-76f0b9357e0f?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img src="assests/motivation.jpg"
                         alt="">
                     <h2>Motivation</h2>
                 </div>
                 <div class="pomo elem" id="3">
-                    <img src="https://images.unsplash.com/photo-1648457259767-e3a7fea65a99?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img src="assests/pomodoro.jpg"
                         alt="">
                     <h2>Pomodoro Timer</h2>
                 </div>
                 <div class="goals elem" id="4">
-                    <img src="https://images.unsplash.com/photo-1718202248232-0cdbc15d29b2?q=80&w=3928&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    <img src="assests/daily.jpg"
                         alt="">
                     <h2>Daily Goals</h2>
                 </div>
